# libargparse

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  libargparse.code-workspace
doc/: Doxyfile  easteregg.hpp  mainpage.md
include/argparse/: ArgumentParser.hpp  api.hpp  argparse.hpp  helpers.hpp  parser.hpp  version.hpp
include/argparse/OptionStyles/: OptionStyle.hpp  UnixStyle.hpp  WindowsStyle.hpp
include/argparse/args/: BooleanArg.hpp  IArgument.hpp  IOptionalArgument.hpp  NARGS.hpp  StringArg.hpp
src/: ArgumentParser.cpp  parser.cpp  version.cpp
src/OptionStyles/: OptionStyle.cpp  UnixStyle.cpp  WindowsStyle.cpp
src/args/: Boolean.cpp  BooleanArg.cpp  IArgument.cpp  IOptionalArgument.cpp  NARGS.cpp  StringArg.cpp
tests/test_app/: CMakeLists.txt
tests/test_app/src/: main.cpp
